--- a/AvalonStalker/AvalonStalker/AvalonStalker.csproj
+++ b/AvalonStalker/AvalonStalker/AvalonStalker.csproj
@@ -12,9 +12,11 @@
             <SubType>Designer</SubType>
         </AvaloniaResource>
         <AvaloniaResource Include="Assets\**" />
+        <Folder Include="XMLGlossary" />
     </ItemGroup>
     <ItemGroup>
         <PackageReference Include="Avalonia" Version="0.9.3" />
+        <PackageReference Include="Avalonia.AvaloniaEdit" Version="0.9.0-preview1" />
         <PackageReference Include="Avalonia.Desktop" Version="0.9.3" />
         <PackageReference Include="Avalonia.ReactiveUI" Version="0.9.3" />
         <PackageReference Include="Material.Avalonia" Version="0.9.0" />
